# zen-claw

./: .cursorrules  .gitignore  AUDIT.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  e2e_simulation.py  pyproject.toml
.github/workflows/: ci.yml  nightly-integration.yml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
browser/sidecar/: README.md  package-lock.json  package.json  server.js
docs/: Intent_Router_Design_20260306_1434.md
go/net-proxy/: README.md  audit_test.go  event_names_test.go  go.mod  handler_test.go  main.go  main_test.go  search_handler_test.go
go/sec-execd/: README.md  event_names_test.go  go.mod  main.go  main_test.go
scripts/: config_acceptance.ps1  debug_imports.py  loc_report.ps1  migrate_to_multitenant.py  perf_baseline.ps1  perf_report.ps1  refresh_agent_context.ps1  release_gate.ps1  selftest_local.ps1  selftest_readability.py
tests/: test_agent_cli_media_option.py  test_agent_identity.py  test_agent_loop_browser_registration.py  test_agent_loop_core.py  test_agent_loop_memory_recall_mode.py  test_agent_loop_process_direct_media.py  test_agent_loop_reasoning_e2e.py  test_agent_loop_skill_slot_injection.py  test_agent_pool.py  test_api_gateway.py  test_approval_gate.py  test_arch_guardrails_doc.py  test_audit_schema_contract.py  test_browser_session_persist.py  test_browser_session_persistence.py  test_browser_sidecar.py  test_browser_sidecar_integration.py  test_channel_default_deny.py  test_channel_manager_media_root.py  test_channel_media_sanitization.py  test_channel_rate_limit.py  test_channel_rate_limit_integration.py  test_channel_rbac_config.py  test_channel_role_rbac.py  test_channels_status_cli.py  test_chinese_channels.py  test_ci_workflow_loc_gate.py  test_cli_commands.py  test_cli_effective_backends.py  test_config_doctor_cli.py  test_config_loader.py  test_config_loader_migration.py  test_config_migrate_cli.py  test_config_production_check_cli.py  test_config_provider_wizard_cli.py  test_config_template_cli.py  test_config_troubleshoot_cli.py  test_context_builder_memory_plugin_behavior.py  test_context_builder_requested_skills.py  test_context_compression_token_aware.py  (+95 more)
zen_claw/: __init__.py  __main__.py  errors.py
zen_claw/agent/: __init__.py  approval_gate.py  context.py  context_compression.py  execution.py  intent_router.py  loop.py  memory.py  memory_extractor.py  (+6 more)
(+111 files in other folders)
